@@ -53,7 +53,7 @@
 ;;menu
 (safe-load "~/.ctafconf/etc/emacs/menu.emacs")
 ;;test
-;;(safe-load "~/.ctafconf/etc/emacs/test.emacs")
+(safe-load "~/.ctafconf/etc/emacs/test.emacs")
 ;;color
 (safe-load "~/.ctafconf/etc/emacs/color.emacs")
 
@@ -70,22 +70,22 @@
 
 
 
-(custom-set-faces
-  ;; custom-set-faces was added by Custom -- don't edit or cut/paste it!
-  ;; Your init file should contain only one such instance.
-;;		:foreground "thistle3"
- '(default ((t (:background "black"
-		:foreground "white"
-		:inverse-video nil
-		:box nil
-		:strike-through nil
-		:overline nil
-		:underline nil
-		:slant normal
-		:weight normal
-		:height 125
-		:width normal
-		:family "misc-fixed")))))
+;; (custom-set-faces
+;;   ;; custom-set-faces was added by Custom -- don't edit or cut/paste it!
+;;   ;; Your init file should contain only one such instance.
+;; ;;		:foreground "thistle3"
+;;  '(default ((t (:background "black"
+;; 		:foreground "white"
+;; 		:inverse-video nil
+;; 		:box nil
+;; 		:strike-through nil
+;; 		:overline nil
+;; 		:underline nil
+;; 		:slant normal
+;; 		:weight normal
+;; 		:height 125
+;; 		:width normal
+;; 		:family "misc-fixed")))))
 
 (custom-set-variables
   ;; custom-set-variables was added by Custom -- don't edit or cut/paste it!
